[project]
name = "image-based-visual-servoing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "pybullet>=3.2.7",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.0",
]
